--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.11.0",
     "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
+    "geolib": "^3.3.4",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
